added lesson work

--- a/tech_with_tim_intermidiate_tutorial_work.ipynb
+++ b/tech_with_tim_intermidiate_tutorial_work.ipynb
@@ -119,6 +119,198 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 27, 256, 3125, 46656, 823543, 16777216, 387420489, 10000000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# map function\n",
+    "# map() takes in a function name and a list name and applies the function to\n",
+    "# every item on the list\n",
+    "\n",
+    "li = [1,2,3,4,5,6,7,8,9,10]\n",
+    "     \n",
+    "def func(x):\n",
+    "    return x**x\n",
+    "\n",
+    "print(list(map(func,li)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 256, 46656, 16777216, 10000000000]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehintion\n",
+    "\n",
+    "[func(item) for item in li if item%2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4 filter function\n",
+    "# filter() takes in a function and a ltterable object\n",
+    "# returns only items in the list that return True when\n",
+    "# the function is applied to it\n",
+    "\n",
+    "def add7(x):\n",
+    "    return x+7\n",
+    "\n",
+    "def is_odd(x):\n",
+    "    return x%2 != 0\n",
+    "\n",
+    "a = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "b = list(filter(is_odd,a))\n",
+    "\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10, 12, 14, 16]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(add7,filter(is_odd,a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5 lambda Tutorial\n",
+    "\n",
+    "def func(x):\n",
+    "    return x+5\n",
+    "\n",
+    "func(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func2 = lambda x: x+5 # lambda uses input variable : return line\n",
+    "\n",
+    "func2(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func3 = lambda x,y: x+y\n",
+    "    \n",
+    "func3(4,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x: x+5,a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
